v20180404 all tables fixed headers

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -260,6 +260,13 @@ footer {
   font-size: 12px;
 }
 
+.teconom {
+  padding-right: 0;
+  margin-right: 0;
+  padding-left: 0;
+  margin-left: 0;
+}
+
 .special-semieconom {
   display:inline;
   font-weight: normal;
