--- a/app/views/contracts/_clients.html.erb
+++ b/app/views/contracts/_clients.html.erb
@@ -2,7 +2,7 @@
    <div id="pan2" class="panel panel-info">
   	<div class="panel-heading"><strong>Клиенты:</strong></div>
   	<div class="panel-body">  		
-	 <table id="m2" class="table table-bordered table-condensed table-hover">
+	 <table id="m2" class="table table-bordered table-condensed table-hover table-striped compact">
 	  <thead>
 	    <tr>
 	      <th>№</th>
